--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xlsx-viewer",
   "displayName": "XLSX, CSV, TSV & Markdown Editor",
   "description": "View and edit XLSX files with colors, fonts and styles from Excel files (supporting in-table editing), and view and edit CSV, TSV & Markdown files in VS Code. This is an open-source project.",
-  "version": "1.6.8",
+  "version": "1.6.9",
   "publisher": "muhammad-ahmad",
   "engines": {
     "vscode": "^1.60.0"
@@ -66,6 +66,7 @@
       {
         "viewType": "xlsxViewer.md",
         "displayName": "Markdown Viewer & Editor",
+        "priority": "option",
         "selector": [
           {
             "filenamePattern": "*.md"
