--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xlsx-viewer",
   "displayName": "XLSX, CSV, TSV & Markdown Editor",
   "description": "View and edit XLSX files with colors, fonts and styles from Excel files (supporting in-table editing), and view and edit CSV, TSV & Markdown files in VS Code. This is an open-source project.",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "publisher": "muhammad-ahmad",
   "engines": {
     "vscode": "^1.60.0"
@@ -194,6 +194,11 @@
             "right"
           ],
           "description": "Position of the preview pane in split view (left or right)."
+        },
+        "xlsxViewer.md.showOutline": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show the Markdown outline panel in the preview."
         }
       }
     }
